# BracketBot

./:  LQR_calibratino_imu_processed copy.py  .CommunicationHandler.py.swo  .cell.py.swp  .gitignore  .setupTrinamic.py.swp  2dmapgenerator.py  4671RegDict.py  AccelTorqueTest.py  BigCreteSpi.py  CommunicationHandler.py  EGO.py  IMU.py  IMU_test.py  IMU_uncool.py  LQR keyboard.py  LQR.py  LQR_balance.py  LQR_balance_async.py  LQR_balance_processed.py  LQR_calibration.py  ParseTrinamicSetup.py  README.md  TorqueTest.py  TrinamicDriver.py  arducam.yaml  balance_process.py  camera.py  camera_path.npy  camera_process.py  cell.py  cellTest.py  checkOdriveParams.py  curses_test.py  driveable_area.npy  ego_motion.py  imu85_process.py  imu_process.py  imu_setup_process.py  keyboard_input_process.py  logging_process.py  (+38 more)
MASTER_LOGS/: dts.txt  (+2 more)
ORB_SLAM2-PythonBindings/: CMakeLists.txt
ORB_SLAM2-PythonBindings/cmake_modules/: FindORB_SLAM2.cmake
ORB_SLAM2-PythonBindings/examples/: camera_path.npy  driveable_area.npy  imports.py  live_camera.py  orbslam_mono_desk.py  orbslam_mono_tum.py  plane_model.py  plot_cam_path.py  runners.py  trajectory.txt
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy.egg-info/: PKG-INFO  SOURCES.txt
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/_lib/: _ccallback_c.c  messagestream.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/cluster/: _hierarchy.c  _optimal_leaf_ordering.c  _vq.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/interpolate/: _bspl.c  _ppoly.c  interpnd.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/io/matlab/: mio5_utils.c  mio_utils.c  streams.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/linalg/: _decomp_update.c  _solve_toeplitz.c  cython_blas.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/ndimage/src/: _cytest.c  _ni_label.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/optimize/: _bglu_dense.c  _group_columns.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/optimize/_lsq/: givens_elimination.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/optimize/_trlib/: _trlib.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/optimize/cython_optimize/: _zeros.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/signal/: _max_len_seq_inner.c  _peak_finding_utils.c  _spectral.c  _upfirdn_apply.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/sparse/: _csparsetools.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/sparse/csgraph/: _min_spanning_tree.c  _reordering.c  _shortest_path.c  _tools.c  _traversal.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/spatial/: _hausdorff.c  _voronoi.c  ckdtree.cxx  qhull.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/special/: _comb.c  _ellip_harm_2.c  _ellip_harm_2.h  _test_round.c  _ufuncs.h  _ufuncs_cxx.cxx  _ufuncs_cxx.h  cython_special.h
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/special/tests/data/: boost.npz  local.npz
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/scipy/stats/: _stats.c
ORB_SLAM2-PythonBindings/examples/scipy-1.3.3/tools/win32/build_scripts/nsis_scripts/: scipy-superinstaller.nsi.in
ORB_SLAM2-PythonBindings/src/: ORBSlamPython.cpp  ORBSlamPython.h  pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp
(+181 files in other folders)
